mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mosquitto
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/arqui-emergentes: "true"
        io.kompose.service: mosquitto
    spec:
      containers:
        - image: mosquitto
          name: mosquitto
          ports:
            - containerPort: 1883
            - containerPort: 9001
          resources: {}
      restartPolicy: Always
status: {}
