sensor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: sensor
  name: sensor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sensor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/arqui-emergentes: "true"
        io.kompose.service: sensor
    spec:
      containers:
        - env:
            - name: MQTT_HOST
              value: mqtt://mosquitto:1883
          image: sensor
          name: sensor
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
