server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
